update almond notebook

--- a/notebook/jupyter-almond.ipynb
+++ b/notebook/jupyter-almond.ipynb
@@ -13,7 +13,6 @@
     "import smile._\n",
     "import smile.util._\n",
     "import smile.math._\n",
-    "import java.lang.Math._\n",
     "import smile.math.MathEx.{log2, logistic, factorial, lfactorial, choose, lchoose, random, randomInt, permutate, c, cbind, rbind, sum, mean, median, q1, q3, `var` => variance, sd, mad, min, max, whichMin, whichMax, unique, dot, distance, pdist, KullbackLeiblerDivergence => kld, JensenShannonDivergence => jsd, cov, cor, spearman, kendall, norm, norm1, norm2, normInf, standardize, normalize, scale, unitize, unitize1, unitize2, root}\n",
     "import smile.math.distance._\n",
     "import smile.math.kernel._\n",
@@ -25,7 +24,8 @@
     "import smile.data.formula._\n",
     "import smile.data.measure._\n",
     "import smile.data.`type`._\n",
-    "import java.awt.Color.{BLACK, BLUE, CYAN, DARK_GRAY, GRAY, GREEN, LIGHT_GRAY, MAGENTA, ORANGE, PINK, RED, WHITE, YELLOW}\n",
+    "import smile.plot.vega._\n",
+    "import smile.plot.show\n",
     "import smile.interpolation._\n",
     "import smile.validation._\n",
     "import smile.association._\n",
@@ -42,7 +42,11 @@
     "import smile.sequence._\n",
     "import smile.projection._\n",
     "import smile.nlp._\n",
-    "import smile.wavelet._"
+    "import smile.wavelet._\n",
+    "\n",
+    "implicit def almond(spec: JsObject): Unit = {\n",
+    "  publish.html(iframe(spec))\n",
+    "}"
    ]
   },
   {
