--- a/notebook/index.ipynb
+++ b/notebook/index.ipynb
@@ -27,13 +27,14 @@
     "\n",
     "A list of Jupyter notebooks demonstrating Smile.\n",
     "\n",
-    "### DataFrame\n",
-    "* [DataFrame](data.ipynb)\n",
+    "### Data\n",
+    "* [Data](data.ipynb)\n",
+    "* [DataFrame](data-frame.ipynb)\n",
     "\n",
     "### Visualization\n",
     "\n",
     "* [Swing-based Plot](plot-swing.ipynb)\n",
-    "* [Vegas-based Plot](plot-vegas.ipynb)\n",
+    "* [Vega-based Plot](plot-vega.ipynb)\n",
     "\n",
     "### Supervised Learning\n",
     "* [Classification](classification.ipynb)\n",
@@ -58,13 +59,6 @@
     "### Jupyter\n",
     "* [Interactive Computing in Scala with Jupyter and Almond](https://github.com/almond-sh/examples/tree/master/notebooks/interactive_computing_article.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
