add more notebooks

--- a/notebook/index.ipynb
+++ b/notebook/index.ipynb
@@ -38,11 +38,12 @@
     "\n",
     "### Supervised Learning\n",
     "* [Classification](classification.ipynb)\n",
-    "* [Regression](data.ipynb)\n",
+    "* [Regression](regression.ipynb)\n",
     "\n",
     "### Unsupervised Learning\n",
     "* [Clustering](clustering.ipynb)\n",
-    "* [Manifold Learning](manifold.ipynb)"
+    "* [Manifold Learning](manifold.ipynb)\n",
+    "* [Multi-Dimensional Scaling](mds.ipynb)"
    ]
   },
   {
