--- a/notebook/plot-vega.ipynb
+++ b/notebook/plot-vega.ipynb
@@ -80,14 +80,14 @@
     "\n",
     "A scatter plot displays data as a collection of points. The points can be color-coded, which is very useful for classification tasks. The user can use `plot` functions to draw scatter plot easily.\n",
     "```\n",
-    "def plot(data: Array[Array[Double]], legend: Char = '*', color: Color = BLACK): PlotCanvas\n",
-    "\n",
-    "def plot(data: Array[Array[Double]], labels: Array[String]): PlotCanvas\n",
-    "\n",
-    "def plot(data: Array[Array[Double]], label: Array[Int], legend: Char, palette: Array[Color]): PlotCanvas\n",
-    "\n",
-    "def plot(data: Array[Array[Double]], label: Array[Int], legend: Array[Char], palette: Array[Color]): PlotCanvas\n",
-    "```"
+    "  def plot(data: Array[Array[Double]],\n",
+    "           fields: (String, String) = (\"x\", \"y\"),\n",
+    "           color: Option[(String, Either[Array[Int], Array[String]])] = None,\n",
+    "           shape: Option[(String, Either[Array[Int], Array[String]])] = None,\n",
+    "           sizeOrText: Option[(String, Either[Array[Double], Array[String]])] = None,\n",
+    "           properties: JsObject = JsObject()): JsObject\n",
+    "```\n",
+    "The optional arguments `color`, `shape`, and `sizeOrText` take a tuple of 2 elements. The first element is the name of field, used in the legend of plot. The second element is either an array of integers (e.g. the class labels) or an array of strings (e.g. \"red\", \"blue\", etc.)"
    ]
   },
   {
@@ -97,40 +97,17 @@
    "outputs": [],
    "source": [
     "val iris = read.arff(\"data/weka/iris.arff\")\n",
-    "/*\n",
+    "val attributes = iris.names\n",
     "val x = iris.select(0, 1).toArray\n",
     "val y = iris(\"class\").toIntArray\n",
-    "val canvas = plot(x, y, Array('*', '+', 'o'), Array(RED, BLUE, CYAN))\n",
-    "val names = iris.names\n",
-    "canvas.setAxisLabels(names(0), names(1))\n",
-    "show(canvas)\n",
-    "*/"
+    "show(plot(x, fields = (attributes(0), attributes(1)), color = Some(\"class\" -> Left(y))))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this example, we plot the first two columns of Iris data. We use the class label for legend and color coding. It is also easy to draw a 3D plot."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val x = iris.select(0, 1, 2).toArray // take first three columns\n",
-    "val canvas = plot(x, y, Array('*', '+', 'o'), Array(RED, BLUE, CYAN))\n",
-    "canvas.setAxisLabels(names(0), names(1), names(2))\n",
-    "show(canvas)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "However, the Iris data has four attributes. So even 3D plot is not sufficient to see the whole picture. A general practice is plot all the attribute pairs. For example,"
+    "In this example, we plot the first two columns of Iris data. We use the class label for legend and color coding. However, the Iris data has four attributes. A general practice is plot all the attribute pairs."
    ]
   },
   {
@@ -150,7 +127,11 @@
     "\n",
     "The box plot is a standardized way of displaying the distribution of data based on the five number summary: minimum, first quartile, median, third quartile, and maximum.\n",
     "\n",
-    "Box plots can be useful to display differences between populations without making any assumptions of the underlying statistical distribution: they are non-parametric. The spacings between the different parts of the box help indicate the degree of dispersion (spread) and skewness in the data, and identify outliers."
+    "Box plots can be useful to display differences between populations without making any assumptions of the underlying statistical distribution: they are non-parametric. The spacings between the different parts of the box help indicate the degree of dispersion (spread) and skewness in the data, and identify outliers.\n",
+    "\n",
+    "```\n",
+    "def boxplot(data: (String, Array[Double]), group: (String, Array[String]), properties: JsObject = JsObject()): JsObject\n",
+    "```"
    ]
   },
   {
@@ -158,7 +139,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "show(boxplot(\"sepallength\" -> iris(\"sepallength\").toDoubleArray, \"class\" -> iris(\"class\").toStringArray))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Histogram\n",
+    "\n",
+    "A histogram is a graphical representation of the distribution of numerical data. The range of values is divided into a series of consecutive, non-overlapping intervals/bins. The bins must be adjacent, and are usually equal size.\n",
+    "```\n",
+    "    def hist(x: (String, Array[Double]), k: Int, properties: JsObject = JsObject()): JsObject\n",
+    "``` \n",
+    "where k is the number of bins (10 by default), or you can also specify an array of the breakpoints between bins.\n",
+    "\n",
+    "Let's apply the histogram to an interesting data: the wisdom of crowds. The original experiment took place about a hundred years ago at a county fair in England. The fair had a guess the weight of the ox contest. Francis Galton calculated the average of all guesses, which is right to within one pound.\n",
+    "\n",
+    "Recently, NPR Planet Money ran the experiment again. NPR posted a couple of pictures of a cow (named Penelope) and asked people to guess her weight. They got over 17,000 responses. The average of guesses was 1,287 pounds, which is pretty close to Penelope's weight 1,355 pounds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val cow = read.csv(\"data/npr/cow.txt\", header = false)(\"V1\").toDoubleArray\n",
+    "show(hist(\"Weight\" -> cow.filter(_ <= 3500), 50))"
+   ]
   }
  ],
  "metadata": {
