update notebooks to use 2.1.1

--- a/notebook/mds.ipynb
+++ b/notebook/mds.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.1.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.1.1`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.26`  \n",
     "\n",
     "import scala.language.postfixOps\n",
@@ -57,7 +57,7 @@
     "import smile.plot.show\n",
     "\n",
     "System.setProperty(\"java.awt.headless\", \"true\")\n",
-    "implicit def display(canvas: javax.swing.JComponent): Unit = {\n",
+    "implicit def render(canvas: javax.swing.JComponent): Unit = {\n",
     "  publish.html(smile.plot.swing.img(canvas))\n",
     "}"
    ]
