--- a/notebook/plot-vega.ipynb
+++ b/notebook/plot-vega.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.1.0`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.1.1`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.26`  \n",
     "\n",
     "import java.lang.Math._\n",
@@ -37,7 +37,7 @@
     "import smile.plot.show\n",
     "import smile._\n",
     "\n",
-    "implicit def display(spec: JsObject): Unit = {\n",
+    "implicit def render(spec: JsObject): Unit = {\n",
     "  publish.html(iframe(spec))\n",
     "}"
    ]
