--- a/notebook/classification.ipynb
+++ b/notebook/classification.ipynb
@@ -15,12 +15,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://repo1.maven.org/maven2/org/slf4j/slf4j-simple/1.7.30/slf4j-simple-1.7.30-sources.jar\n",
+      "Downloaded https://repo1.maven.org/maven2/org/slf4j/slf4j-simple/1.7.30/slf4j-simple-1.7.30-sources.jar\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36m$ivy.$                                       \n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36m$ivy.$                                \n",
+       "\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36mscala.language.postfixOps\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.math._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.math.distance._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.math.kernel._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.math.matrix._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.math.matrix.Matrix._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.math.rbf._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.stat.distribution._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.data._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.data.formula._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.data.measure._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.data.`type`._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.base.cart.SplitRule\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.base.mlp._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.base.rbf.RBF\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.classification._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.feature._\n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36msmile.validation._\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.1.1`\n",
-    "import $ivy.`org.slf4j:slf4j-simple:1.7.26`  \n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.2.0`\n",
+    "import $ivy.`org.slf4j:slf4j-simple:1.7.30`  \n",
     "\n",
     "import scala.language.postfixOps\n",
     "import smile._\n",
