--- a/notebook/data.ipynb
+++ b/notebook/data.ipynb
@@ -54,7 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.1.1`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.2.0`\n",
+    "import $ivy.`org.slf4j:slf4j-simple:1.7.30`  \n",
     "\n",
     "import scala.language.postfixOps\n",
     "import org.apache.commons.csv.CSVFormat\n",
