add notebooks of matrix, nlp, etc

--- a/notebook/index.ipynb
+++ b/notebook/index.ipynb
@@ -29,7 +29,8 @@
     "\n",
     "### Data\n",
     "* [Data](data.ipynb)\n",
-    "* [DataFrame](data-frame.ipynb)\n",
+    "* [Data Frame](data-frame.ipynb)\n",
+    "* [Formula](formula.ipynb)\n",
     "\n",
     "### Visualization\n",
     "\n",
@@ -43,7 +44,17 @@
     "### Unsupervised Learning\n",
     "* [Clustering](clustering.ipynb)\n",
     "* [Manifold Learning](manifold.ipynb)\n",
-    "* [Multi-Dimensional Scaling](mds.ipynb)"
+    "* [Multi-Dimensional Scaling](mds.ipynb)\n",
+    "\n",
+    "### Natural Language Processing\n",
+    "* [NLP](nlp.ipynb)\n",
+    "\n",
+    "### Mathematics\n",
+    "* [Computer Algebra System](cas.ipynb)\n",
+    "* [Linear Algebra](matrix.ipynb)\n",
+    "* [Statistics](stat.ipynb)\n",
+    "* [Interpolation](interpolation.ipynb)\n",
+    "* [Wavelet](wavelet.ipynb)"
    ]
   },
   {
