--- a/notebook/interpolation.ipynb
+++ b/notebook/interpolation.ipynb
@@ -247,7 +247,7 @@
     "val bicubic = new BicubicInterpolation(x1, x2, y)\n",
     "\n",
     "for (i <- 0 to 100; j <- 0 to 100)\n",
-    "    data(i)(j) = cubic.interpolate(1950 + i*0.4, 10 + j*0.2)\n",
+    "    data(i)(j) = bicubic.interpolate(1950 + i*0.4, 10 + j*0.2)\n",
     "\n",
     "val bicubicPlot = heatmap(data, Palette.jet(256))\n",
     "bicubicPlot.setTitle(\"Bicubic\")\n",
@@ -294,7 +294,7 @@
    "outputs": [],
    "source": [
     "LaplaceInterpolation.interpolate(zz)\n",
-    "val canvas = heatmap(zz, Palette.jet(256));\n",
+    "val canvas = heatmap(zz, Palette.jet(256))\n",
     "canvas.setTitle(\"Laplace\")\n",
     "show(canvas)"
    ]
