--- a/notebook/mds.ipynb
+++ b/notebook/mds.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import $ivy.`com.github.haifengl::smile-scala:2.2.2`\n",
+    "import $ivy.`com.github.haifengl::smile-scala:2.3.0`\n",
     "import $ivy.`org.slf4j:slf4j-simple:1.7.30`  \n",
     "\n",
     "import scala.language.postfixOps\n",
@@ -56,9 +56,8 @@
     "import smile.plot.swing._\n",
     "import smile.plot.show\n",
     "\n",
-    "System.setProperty(\"java.awt.headless\", \"true\")\n",
-    "implicit def render(canvas: javax.swing.JComponent): Unit = {\n",
-    "  publish.html(smile.plot.swing.img(canvas))\n",
+    "implicit def render(canvas: Canvas): Unit = {\n",
+    "  publish.html(smile.plot.swing.canvas2Image(canvas))\n",
     "}"
    ]
   },
@@ -70,7 +69,7 @@
     "\n",
     "Classical multidimensional scaling is also known as principal coordinates analysis. Given a matrix A of dissimilarities (e.g. pairwise distances), MDS finds a set of points in low dimensional space that well-approximates the dissimilarities in A. We are not restricted to using a Euclidean distance metric. However, when Euclidean distances are used, classical MDS is equivalent to PCA.\n",
     "```\n",
-    "    def mds(proximity: Array[Array[Double]], k: Int, add: Boolean = false): MDS\n",
+    "def mds(proximity: Array[Array[Double]], k: Int, add: Boolean = false): MDS\n",
     "``` \n",
     "where proximity is the nonnegative proximity matrix of dissimilarities. The diagonal should be zero and all other elements should be positive and symmetric. For pairwise distances matrix, it should be just the plain distance, not squared. The parameter k is the dimension of output space. If the parameter add is true, the method estimates an appropriate constant to be added to all the dissimilarities, apart from the self-dissimilarities, that makes the learning matrix positive semi-definite. The other formulation of the additive constant problem is as follows. If the proximity is measured in an interval scale, where there is no natural origin, then there is not a sympathy of the dissimilarities to the distances in the Euclidean space used to represent the objects. In this case, we can estimate a constant c such that proximity + c may be taken as ratio data, and also possibly to minimize the dimensionality of the Euclidean space required for representing the objects."
    ]
@@ -81,11 +80,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val eurodist = read.csv(\"data/projection/eurodist.txt\", delimiter = '\\t', header = true)\n",
+    "val eurodist = read.csv(\"data/projection/eurodist.txt\", delimiter = '\\t', header = false)\n",
     "val dist = eurodist.drop(0).toArray\n",
     "val citys = eurodist.stringVector(0).toArray\n",
     "val x = mds(dist, 2).coordinates\n",
-    "show(plot(x, citys))"
+    "show(text(citys, x))"
    ]
   },
   {
@@ -95,7 +94,7 @@
     "## Kruskal's Nonmetric MDS\n",
     "Kruskal's nonmetric MDS. In non-metric MDS, only the rank order of entries in the proximity matrix (not the actual dissimilarities) is assumed to contain the significant information. Hence, the distances of the final configuration should as far as possible be in the same rank order as the original data. Note that a perfect ordinal re-scaling of the data into distances is usually not possible. The relationship is typically found using isotonic regression.\n",
     "```\n",
-    "    def isomds(proximity: Array[Array[Double]], k: Int, tol: Double = 0.0001, maxIter: Int = 200): IsotonicMDS\n",
+    "def isomds(proximity: Array[Array[Double]], k: Int, tol: Double = 0.0001, maxIter: Int = 200): IsotonicMDS\n",
     "``` \n",
     "where tol is the tolerance for stopping iterations, and maxIter is the maximum number of iterations."
    ]
@@ -107,7 +106,7 @@
    "outputs": [],
    "source": [
     "val x = isomds(dist, 2).coordinates\n",
-    "show(plot(x, citys))"
+    "show(text(citys, x))"
    ]
   },
   {
@@ -122,7 +121,7 @@
     "\n",
     "The projection cannot be solved in a closed form and may be found by an iterative algorithm such as gradient descent suggested by Sammon. Kohonen also provides a heuristic that is simple and works reasonably well.\n",
     "```\n",
-    "    def sammon(proximity: Array[Array[Double]], k: Int, lambda: Double = 0.2, tol: Double = 0.0001, maxIter: Int = 100): SammonMapping\n",
+    "def sammon(proximity: Array[Array[Double]], k: Int, lambda: Double = 0.2, tol: Double = 0.0001, maxIter: Int = 100): SammonMapping\n",
     "```\n",
     "where lambda is the initial value of the step size constant in diagonal Newton method."
    ]
@@ -134,7 +133,7 @@
    "outputs": [],
    "source": [
     "val x = sammon(dist, 2).coordinates\n",
-    "show(plot(x, citys))"
+    "show(text(citys, x))"
    ]
   }
  ],
